[gd_scene load_steps=23 format=3 uid="uid://mq8cvko6co3o"]

[ext_resource type="Script" path="res://menus/song_list/SongList.gd" id="2"]
[ext_resource type="PackedScene" uid="uid://dtchd3yrqrcbd" path="res://menus/HBTextInput.tscn" id="3"]
[ext_resource type="PackedScene" uid="uid://coi010tlbihnq" path="res://menus/PromptPanel.tscn" id="4"]
[ext_resource type="Texture2D" uid="uid://cqfshc705ouhm" path="res://graphics/icons/filter-menu.svg" id="4_4pum8"]
[ext_resource type="PackedScene" uid="uid://r6cc2m204dqw" path="res://menus/HBConfirmationWindow.tscn" id="5"]
[ext_resource type="Texture2D" uid="uid://dui0a71scapf5" path="res://graphics/slide_fx_star.png" id="6_t7ijm"]
[ext_resource type="Script" path="res://menus/HBSimpleMenu.gd" id="7"]
[ext_resource type="FontVariation" uid="uid://wkerk1bs0uut" path="res://fonts/default_font_regular.tres" id="7_fawyf"]
[ext_resource type="Texture2D" uid="uid://dq1i623nxlj8v" path="res://graphics/icons/sort-ascending.png" id="8"]
[ext_resource type="Texture2D" uid="uid://dku88ebe3yjq0" path="res://graphics/icons/download.svg" id="9"]
[ext_resource type="Script" path="res://menus/song_list/SongListSongContainer.gd" id="10"]
[ext_resource type="PackedScene" uid="uid://c4tvo47nahi4h" path="res://menus/FolderManager.tscn" id="11"]
[ext_resource type="Script" path="res://menus/ScrollingLabel.gd" id="12"]
[ext_resource type="StyleBox" uid="uid://s4015jqriuh3" path="res://styles/PanelStyleTransparent.tres" id="12_787qn"]
[ext_resource type="Theme" uid="uid://b4yu237ua3sml" path="res://Theme_Game_Min.tres" id="15_3x86c"]
[ext_resource type="PackedScene" uid="uid://ru3raamtduxd" path="res://menus/song_list/SongListSortByPanel.tscn" id="15_y4k7r"]
[ext_resource type="FontVariation" uid="uid://weeyd75f2ma7" path="res://fonts/default_font_medium.tres" id="16"]
[ext_resource type="Texture2D" uid="uid://cfnmpwyjlgoc8" path="res://graphics/icons/refresh-big.svg" id="17"]
[ext_resource type="FontVariation" uid="uid://ccdyv65ubusey" path="res://fonts/default_font_black.tres" id="18"]

[sub_resource type="Animation" id="1"]
resource_name = "spin"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_igfnq"]
_data = {
"spin": SubResource("1")
}

[sub_resource type="StyleBoxFlat" id="5"]
content_margin_left = 10.0
content_margin_top = 4.0
content_margin_right = 10.0
content_margin_bottom = 4.0
bg_color = Color(0.188235, 0.0705882, 0.301961, 0.74902)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.592157, 0.239216, 0.94902, 0.501961)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_color = Color(0, 0, 0, 0.25098)
shadow_size = 10
anti_aliasing_size = 2.0

[node name="SongListMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("15_3x86c")
script = ExtResource("2")

[node name="SpinnerContainer" type="CenterContainer" parent="."]
visible = false
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CenterContainer" type="CenterContainer" parent="SpinnerContainer"]
layout_mode = 2
use_top_left = true

[node name="TextureRect" type="TextureRect" parent="SpinnerContainer/CenterContainer"]
layout_mode = 2
texture = ExtResource("17")
stretch_mode = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="SpinnerContainer/CenterContainer/TextureRect"]
libraries = {
"": SubResource("AnimationLibrary_igfnq")
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 0.995
offset_top = 10.0
size_flags_horizontal = 3
theme_override_constants/separation = 5

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 35

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="PanelContainer" type="HBPanelContainerBlurEX" parent="VBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/panel = SubResource("5")

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/VBoxContainer2/HBoxContainer/PanelContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/VBoxContainer2/HBoxContainer/PanelContainer/HBoxContainer2"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
texture = ExtResource("4_4pum8")
expand_mode = 1
stretch_mode = 5

[node name="InputGlyphRect" type="InputGlyphRect" parent="VBoxContainer/VBoxContainer2/HBoxContainer/PanelContainer/HBoxContainer2"]
layout_mode = 2
action_text = ""
action_name = &"note_up"

[node name="HFlowContainer" type="HFlowContainer" parent="VBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="SortModeContainer" type="HBPanelContainerBlurEX" parent="VBoxContainer/VBoxContainer2/HBoxContainer/HFlowContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"SongListFilterItemPanel"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/VBoxContainer2/HBoxContainer/HFlowContainer/SortModeContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/VBoxContainer2/HBoxContainer/HFlowContainer/SortModeContainer/HBoxContainer2"]
custom_minimum_size = Vector2(39, 0)
layout_mode = 2
texture = ExtResource("8")
expand_mode = 1
stretch_mode = 5

[node name="SortModeLabel" type="Label" parent="VBoxContainer/VBoxContainer2/HBoxContainer/HFlowContainer/SortModeContainer/HBoxContainer2"]
unique_name_in_owner = true
auto_translate_mode = 2
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Difficulty"
vertical_alignment = 1

[node name="WithMediaPanelContainer" type="HBPanelContainerBlurEX" parent="VBoxContainer/VBoxContainer2/HBoxContainer/HFlowContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"SongListFilterItemPanel"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/VBoxContainer2/HBoxContainer/HFlowContainer/WithMediaPanelContainer"]
layout_mode = 2

[node name="TextureRect2" type="TextureRect" parent="VBoxContainer/VBoxContainer2/HBoxContainer/HFlowContainer/WithMediaPanelContainer/HBoxContainer2"]
custom_minimum_size = Vector2(39, 0)
layout_mode = 2
texture = ExtResource("9")
expand_mode = 1
stretch_mode = 5

[node name="Label2" type="Label" parent="VBoxContainer/VBoxContainer2/HBoxContainer/HFlowContainer/WithMediaPanelContainer/HBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "With media"
vertical_alignment = 1

[node name="StarFilterPanelContainer" type="HBPanelContainerBlurEX" parent="VBoxContainer/VBoxContainer2/HBoxContainer/HFlowContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"SongListFilterItemPanel"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/VBoxContainer2/HBoxContainer/HFlowContainer/StarFilterPanelContainer"]
layout_mode = 2

[node name="TextureRect2" type="TextureRect" parent="VBoxContainer/VBoxContainer2/HBoxContainer/HFlowContainer/StarFilterPanelContainer/HBoxContainer2"]
custom_minimum_size = Vector2(39, 0)
layout_mode = 2
texture = ExtResource("6_t7ijm")
expand_mode = 3
stretch_mode = 5

[node name="StarFilterLabel" type="Label" parent="VBoxContainer/VBoxContainer2/HBoxContainer/HFlowContainer/StarFilterPanelContainer/HBoxContainer2"]
unique_name_in_owner = true
auto_translate_mode = 2
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "1-2"
vertical_alignment = 1

[node name="NoteUsageFilterPanelContainer" type="HBPanelContainerBlurEX" parent="VBoxContainer/VBoxContainer2/HBoxContainer/HFlowContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"SongListFilterItemPanel"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/VBoxContainer2/HBoxContainer/HFlowContainer/NoteUsageFilterPanelContainer"]
layout_mode = 2

[node name="NoteUsageFilterTextureRect" type="TextureRect" parent="VBoxContainer/VBoxContainer2/HBoxContainer/HFlowContainer/NoteUsageFilterPanelContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(39, 0)
layout_mode = 2
texture = ExtResource("6_t7ijm")
expand_mode = 3
stretch_mode = 5

[node name="VBoxContainer" type="HBoxContainer" parent="VBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_constants/separation = 10
alignment = 2
script = ExtResource("7")
stop_hover_on_focus_exit = false

[node name="FolderPathContainer" type="HBoxContainer" parent="VBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="FolderPath" type="Control" parent="VBoxContainer/VBoxContainer2/FolderPathContainer"]
unique_name_in_owner = true
clip_children = 2
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("12")
font_1 = ExtResource("7_fawyf")
font_2 = ExtResource("16")
text_2 = ""

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
show_behind_parent = true
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="VBoxContainer" type="ScrollContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 2
script = ExtResource("10")
container_path = NodePath("VBoxContainer")
horizontal_step = 0
enable_fade = true
enable_wrap_around = true
items_to_report_visibility_to = 10
scroll_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 0
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer"]
visible = false
layout_mode = 2
theme_override_fonts/font = ExtResource("18")
text = "No folders found, add some!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Prompts" type="VBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_stretch_ratio = 1.25
alignment = 1

[node name="HBoxContainer" type="HBPanelContainerBlurEX" parent="VBoxContainer/Prompts"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme_override_styles/panel = ExtResource("12_787qn")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Prompts/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10
alignment = 1

[node name="Panel7" parent="VBoxContainer/Prompts/HBoxContainer/HBoxContainer" instance=ExtResource("4")]
custom_minimum_size = Vector2(136, 53)
layout_mode = 2
action_name = "note_up"
text = "Sort"

[node name="Panel13" parent="VBoxContainer/Prompts/HBoxContainer/HBoxContainer" instance=ExtResource("4")]
custom_minimum_size = Vector2(184, 53)
layout_mode = 2
action_name = "gui_search"
text = "Search"

[node name="Panel8" parent="VBoxContainer/Prompts/HBoxContainer/HBoxContainer" instance=ExtResource("4")]
custom_minimum_size = Vector2(188, 53)
layout_mode = 2
action_name = "contextual_option"
text = "Add to..."

[node name="Panel9" parent="VBoxContainer/Prompts/HBoxContainer/HBoxContainer" instance=ExtResource("4")]
custom_minimum_size = Vector2(193, 53)
layout_mode = 2
action_name = "contextual_option"
text = "Manage"

[node name="Panel10" parent="VBoxContainer/Prompts/HBoxContainer/HBoxContainer" instance=ExtResource("4")]
custom_minimum_size = Vector2(201, 53)
layout_mode = 2
action_name = "contextual_option"
text = "Remove"

[node name="Panel11" parent="VBoxContainer/Prompts/HBoxContainer/HBoxContainer" instance=ExtResource("4")]
custom_minimum_size = Vector2(170, 53)
layout_mode = 2
action_name = "gui_accept"
text = "Select"

[node name="Panel12" parent="VBoxContainer/Prompts/HBoxContainer/HBoxContainer" instance=ExtResource("4")]
custom_minimum_size = Vector2(146, 53)
layout_mode = 2
action_name = "gui_cancel"
text = "Back"

[node name="PPDAudioBrowseWindow" parent="." instance=ExtResource("5")]
visible = false
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 508.5
offset_top = -438.0
offset_right = 1170.5
offset_bottom = 991.0
grow_horizontal = 1
grow_vertical = 1
text = "The song you selected is a PPD song without an existing audio file, would you like to select one (from disk or YouTube)? This will require yo to use the mouse."

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource("15_3x86c")

[node name="SortByPanel" parent="CenterContainer" instance=ExtResource("15_y4k7r")]
layout_mode = 2

[node name="FolderManager" parent="." instance=ExtResource("11")]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -374.0
offset_top = -264.5
offset_right = 374.0
offset_bottom = 264.5

[node name="SongCountIndicator" type="Label" parent="."]
auto_translate_mode = 2
layout_mode = 0
anchor_left = 0.015
anchor_top = 0.945
anchor_right = 0.015
anchor_bottom = 1.0
offset_left = 0.200001
offset_top = 12.4
offset_right = 290.2
theme_override_fonts/font = ExtResource("18")
text = "123/123"
vertical_alignment = 1

[node name="SearchTextInput" parent="." instance=ExtResource("3")]
visible = false
layout_mode = 0
text = "Enter the search term:"

[connection signal="end_loading" from="VBoxContainer/MarginContainer/VBoxContainer" to="SpinnerContainer" method="hide"]
[connection signal="end_loading" from="VBoxContainer/MarginContainer/VBoxContainer" to="SpinnerContainer/CenterContainer/TextureRect/AnimationPlayer" method="stop"]
[connection signal="hide_no_folder_label" from="VBoxContainer/MarginContainer/VBoxContainer" to="VBoxContainer/MarginContainer/Label" method="hide"]
[connection signal="show_no_folder_label" from="VBoxContainer/MarginContainer/VBoxContainer" to="VBoxContainer/MarginContainer/Label" method="show"]
[connection signal="start_loading" from="VBoxContainer/MarginContainer/VBoxContainer" to="SpinnerContainer" method="show"]
[connection signal="start_loading" from="VBoxContainer/MarginContainer/VBoxContainer" to="SpinnerContainer/CenterContainer/TextureRect/AnimationPlayer" method="play" binds= ["spin"]]
